--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,12 @@
             <artifactId>grid-pagination</artifactId>
             <version>2.0.10</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.14.1</version>
+        </dependency>
 
     </dependencies>
 
