--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,8 @@
 spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME} 
-spring.datasource.password=${JDBC_DATABASE_PASSWORD} 
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.initialization-mode=always
+spring.datasource.data=data.sql
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
